Major Fixes With create Post Screen

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,9 +14,10 @@ composeBom = "2025.07.00"
 hiltNavigationCompose = "1.2.0"
 firebaseAuth = "23.2.1"
 firebaseFirestore = "25.1.4"
-kotlin-ksp = "2.0.21-1.0.28"
+kotlin-ksp = "2.2.0-2.0.2"
 kotlin = "2.2.0"
-ksp = "2.0.21-1.0.28"
+ksp = "2.2.0-2.0.2"            # exact match to Kotlin
+kspGradlePlugin = "2.2.0-2.0.2"
 hilt = "2.57"
 googleServices = "4.4.3"
 lottieCompose = "6.6.7"
